--- a/tests/Application/templates/bundles/SyliusShopBundle/Homepage/_banner.html.twig
+++ b/tests/Application/templates/bundles/SyliusShopBundle/Homepage/_banner.html.twig
@@ -1,11 +1,14 @@
-<div class="homepage-banner">
-    <div class="homepage-banner__image">
-        <img src="{{ asset('build/shop/images/homepage-banner.jpg', 'shop') }}" alt="{{ 'sylius.homepage.banner_content'|trans }}">
+{#{% extends '@SyliusShop/Homepage/_banner.html.twig' %}#}
+{% block content %}
+    <div class="homepage-banner">
+        <div class="homepage-banner__image">
+            <img src="{{ asset('build/shop/images/homepage-banner.jpg', 'shop') }}" alt="{{ 'sylius.homepage.banner_content'|trans }}">
+        </div>
+        <div class="homepage-banner__content">
+            <div>{{ 'sylius.homepage.banner_content'|trans }}</div>
+            <a href="#" class="ui huge primary button">{{ 'sylius.homepage.banner_button'|trans }}</a>
+            <h1>Test</h1>
+        </div>
     </div>
-    <div class="homepage-banner__content">
-        <div>{{ 'sylius.homepage.banner_content'|trans }}</div>
-        <a href="#" class="ui huge primary button">{{ 'sylius.homepage.banner_button'|trans }}</a>
-        <h1>Test</h1>
-    </div>
-</div>
+{% endblock %}
 
